--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,7 +35,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-          url = "/swagger.json";
+          url = "/api/gaia/swagger.json";
       }
 
       // Pre load translate...
